# emtlib

./: COPYING  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  config.h.in  configure  configure.ac
doc/: DOCUMENTING.txt  bignums.txt  coding.txt  cxx objects.txt  error handling.txt  expa-collect.txt  expa-fix.sed  fea-proc.sed  file formats.txt  garray-exparray.sed  gui-design.txt  hooks.txt  lang-convert.txt  memman3.txt  memory management 2.txt  memory management.txt  parsers.txt  portability.txt  reference counting.txt  sea-proc.sed  standards.txt  structures.txt  todo.txt  user interfaces.txt
src/: Makefile.am  Makefile.in  ansi2knr.c  core.h  gawrapper.h  hooks.c  hooks.h  lnlist.c  lnlist.h  main.c  timain.c  winmain.c
src/fixme/: bitnum.c  fibers.c  memmgmt.c  options.c  sea-fea.c  text.c  unistd.c  xml.cpp  xml.h
src/glib/: Makefile.am  Makefile.in  garray.c  garray.h  glib.h  gmacros.h  gmem.c  gmem.h  gqsort.c  gqsort.h  gslice.c  gslice.h  gstring.c  gstring.h  gtypes.h
src/old/: exparray.old1.h  exparray.old2.h
tests/: Makefile.am  Makefile.in  etest1.c  etest2.c
